--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
 <head>
-    <link href="./css/styles.dist.css" rel="stylesheet">
+    <link href="./css/dist/styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>VANDYQUACKS</h1>
-
+    <div class="banner text-white grid">
+        <img class="place-self-center h-20" src="facebook.png" />
+    </div>
+    <br>
+    <div class="container mx-auto">
+        <div class="grid grid-cols-2 gap-7">
+            <div class="card bg-yellow-400">test</div>
+            <div class="card bg-yellow-400">tet</div>
+            <div class="card bg-yellow-400">test</div>
+        </div>
+    </div>
 </body>
 </html>
