--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
     <link href="./css/dist/styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="banner text-white grid">
-        <img class="place-self-center h-20" src="facebook.png" />
+    <div class="banner text-white grid h-80">
+        <img class="place-self-center h-80" src="QUACKS.png" />
+        <div class="keepDuck place-self-center">Feel free to keep the duck!</div>
     </div>
     <br>
-    <div class="container mx-auto">
-        <div class="grid grid-cols-2 gap-7">
-            <div class="card bg-yellow-400">test</div>
-            <div class="card bg-yellow-400">tet</div>
-            <div class="card bg-yellow-400">test</div>
+    <div class="container place-self-center mx-auto">
+        <div class="grid place-self-center grid-cols-1 gap-7">
+            <div class="card place-self-center bg-yellow-400">
+                <img class = "chev" src="CHEV.png"></img>
+                <a class="content" href="getducked.html">Sign up for Duck Facts!</a>
+            </div>
+            <div class="card place-self-center bg-yellow-400">
+                <a class="fullbutton" href = "https://vandyhacks.org/">
+                <img class="chev" src="CHEV.png"></img>
+                <div class="content" >Check out our main website!</div>
+                </a>
+            </div>
+            <div class="card place-self-center bg-yellow-400">
+                <a class="fullbutton" href = "https://rubberduckdebugging.com/">
+                <img class="chev" src="CHEV.png"></img>
+                <div class="content">Learn about rubber duck debugging</div>
+            </a>
+            </div>
+            <div class="card place-self-center bg-yellow-400">
+                <img class="chev" src="CHEV.png"></img>
+                <a class="content" href="getducked.html">Click here to get ducked</a>
+            </div>
         </div>
     </div>
 </body>
