--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="grid place-self-center grid-cols-1 gap-7">
             <div class="card place-self-center bg-yellow-400">
                 <img class = "chev" src="CHEV.png"></img>
-                <a class="content" href="getducked.html">Sign up for Duck Facts!</a>
+                <a class="content" href="ducksfacts.html">Sign up for Duck Facts!</a>
             </div>
             <div class="card place-self-center bg-yellow-400">
                 <a class="fullbutton" href = "https://vandyhacks.org/">
@@ -32,5 +32,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
