make duck keep text marquee 7th grade flashback

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="banner text-white grid h-80">
         <img class="place-self-center h-80" src="QUACKS.png" />
-        <div class="keepDuck place-self-center">Feel free to keep the duck!</div>
+        <marquee class="keepDuck place-self-center">Feel free to keep the duck! 🦆</marquee>
     </div>
     <br>
     <div class="container place-self-center mx-auto">
