idk if this works, make button clickable
fingers crossed

--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <br>
     <div class="container place-self-center mx-auto">
         <div class="grid place-self-center grid-cols-1 gap-7">
+            <a class="fullbutton" href="ducksfacts.html">
             <div class="card place-self-center bg-yellow-400">
-                <a class="fullbutton" href="ducksfacts.html">
                 <img class = "chev" src="CHEV.png"></img>
-                <div class="content" href="ducksfacts.html">Sign up for Duck Facts!</div>
-                </a>
+                <div class="content">Sign up for Duck Facts!</div>
             </div>
+            </a>
+            <a class="fullbutton" href = "https://vandyhacks.org/">
             <div class="card place-self-center bg-yellow-400">
-                <a class="fullbutton" href = "https://vandyhacks.org/">
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content" >Check out our main website!</div>
-                </a>
             </div>
+            </a>
+            <a class="fullbutton" href = "https://rubberduckdebugging.com/">
             <div class="card place-self-center bg-yellow-400">
-                <a class="fullbutton" href = "https://rubberduckdebugging.com/">
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content">Learn about rubber duck debugging</div>
-                </a>
             </div>
+            </a>
+            <a class="fullbutton" href="getducked.html">
             <div class="card place-self-center bg-yellow-400">
-                <a class="fullbutton" href="getducked.html">
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content">Click here to get ducked</div>
-                </a>
             </div>
+            </a>
         </div>
     </div>
 
