--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <br>
     <div class="container place-self-center mx-auto">
         <div class="grid place-self-center grid-cols-1 gap-7">
-            <a class="fullbutton" href="ducksfacts.html">
+            <a href="ducksfacts.html">
             <div class="card place-self-center bg-yellow-400">
                 <img class = "chev" src="CHEV.png"></img>
                 <div class="content">Sign up for Duck Facts!</div>
             </div>
             </a>
-            <a class="fullbutton" href = "https://vandyhacks.org/">
+            <a href = "https://vandyhacks.org/">
             <div class="card place-self-center bg-yellow-400">
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content" >Check out our main website!</div>
             </div>
             </a>
-            <a class="fullbutton" href = "https://rubberduckdebugging.com/">
+            <a href = "https://rubberduckdebugging.com/">
             <div class="card place-self-center bg-yellow-400">
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content">Learn about rubber duck debugging</div>
             </div>
             </a>
-            <a class="fullbutton" href="getducked.html">
+            <a href="getducked.html">
             <div class="card place-self-center bg-yellow-400">
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content">Click here to get ducked</div>
