--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
     <br>
     <div class="container place-self-center mx-auto">
         <div class="grid place-self-center grid-cols-1 gap-7">
-            <a href="ducksfacts.html">
-            <div class="card place-self-center bg-yellow-400">
+            <a class="card place-self-center bg-yellow-400" href="ducksfacts.html">
+            <div>
                 <img class = "chev" src="CHEV.png"></img>
                 <div class="content">Sign up for Duck Facts!</div>
             </div>
             </a>
-            <a href = "https://vandyhacks.org/">
-            <div class="card place-self-center bg-yellow-400">
+            <a class="card place-self-center bg-yellow-400" href = "https://vandyhacks.org/">
+            <div>
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content" >Check out our main website!</div>
             </div>
             </a>
-            <a href = "https://rubberduckdebugging.com/">
-            <div class="card place-self-center bg-yellow-400">
+            <a class="card place-self-center bg-yellow-400" href = "https://rubberduckdebugging.com/">
+            <div>
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content">Learn about rubber duck debugging</div>
             </div>
             </a>
-            <a href="getducked.html">
-            <div class="card place-self-center bg-yellow-400">
+            <a class="card place-self-center bg-yellow-400" href="getducked.html">
+            <div>
                 <img class="chev" src="CHEV.png"></img>
                 <div class="content">Click here to get ducked</div>
             </div>
