yeah idk how to fix this

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <br>
     <div class="container place-self-center mx-auto">
         <div class="grid place-self-center grid-cols-1 gap-7">
-            <a class="card bg-yellow-400" href="ducksfacts.html">
-            <div class="place-self-center">
+            <a class="card place-self-center bg-yellow-400" href="ducksfacts.html">
+            <div>
                 <img class = "chev" src="CHEV.png"></img>
                 <div class="content">Sign up for Duck Facts!</div>
             </div>
