--- a/ducksfacts.html
+++ b/ducksfacts.html
@@ -6,24 +6,24 @@
 </head>
 <body>
     <div class="banner text-white grid h-80">
-        <img class="place-self-center h-80" src="QUACKS.png" />
+        <img class="place-self-center h-80 spinnyspinny" src="QUACKS.png" />
         <div class="keepDuck place-self-center">Enter phone/email for Duck Facts!</div>
     </div>
-
+    <br>
     <div class="container place-self-center mx-auto">
-        <div class="grid place-self-center grid-cols-1 gap-7">
-    <div class="place-self-center">
-    <input placeholder="Email" type="email" class="input place-self-center" id="email"></input>
-    <br>
-    <button class="button place-self-center" id="submitEmail">submit</button>
-</div>
-    <br>
-    <div class="place-self-center">
-    <input placeholder="Phone" type="tel" class="input place-self-center" id="phone"></input>
-    <br>
-    <button class="button place-self-center" id="submitPhone">submit</button>
-</div>
-</div>
+        <div class="grid place-self-center grid-cols-1 gap-7 ugly">
+            <div class="card place-self-center">
+                <input placeholder="Email" type="email" class="input place-self-center" id="email"></input>
+                <br>
+                <button class="button place-self-center" id="submitEmail">submit</button>
+            </div>
+            <br>
+            <div class="card place-self-center">
+                <input placeholder="Phone" type="tel" class="input place-self-center" id="phone"></input>
+                <br>
+                <button class="button place-self-center" id="submitPhone">submit</button>
+            </div>
+        </div>
     </div>
 
 
